--- a/assets/style.css
+++ b/assets/style.css
@@ -5,3 +5,12 @@
 .game-gui {
   margin-top: 5rem;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
