added Top Score card with hardcoded value

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,3 +14,9 @@
     -ms-user-select: none;
     user-select: none;
 }
+
+#top-score {
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: .2rem;
+}
