--- a/assets/style.css
+++ b/assets/style.css
@@ -21,10 +21,17 @@
   text-transform: uppercase;
   font-weight: 100;
 }
+
 div.col a.btn {
   border-radius: 10px;
 }
+
 #top-score {
   font-weight: 500;
   letter-spacing: .1rem;
+}
+
+#user-record {
+  width: 5rem;
+  height: 5rem;
 }
